# memos

./: .gitignore  API_KEY_SYSTEM.md  CLOUD_RUN_DEPLOYMENT.md  ENVIRONMENT_CONFIG.md  ENVIRONMENT_CONFIG_DETAILED.md  GEMINI_MIGRATION_NOTES.md  PORT_CONFIGURATION.md  POSTGRESQL_ARRAY_PARSING_SOLUTION.md  PROFILE_EDITING_FEATURE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-db.sh  start-dev.sh  stop-dev.sh  verify-ports.sh
.cursor/rules/: rule.mdc
apps/backend/: .dockerignore  .env.backup  AVATAR_STORAGE_SETUP.md  Dockerfile  Dockerfile.dev  PERFORMANCE_OPTIMIZATIONS.md  README.md  SEARCH_IMPROVEMENTS.md  add_app_name_migration.sql  database.sql  index.ts  jest.config.js  migrate_session_id.sql  package.json  setup_avatar_storage.sh  setup_avatar_storage.sql  tsconfig.json
apps/frontend/: .dockerignore  .env.example  Dockerfile.dev  package.json  tsconfig.tsbuildinfo
apps/mcp/: .dockerignore  Dockerfile  Dockerfile.dev  package-lock.json  package.json
mcp/: main.py  pyproject.toml
supabase/: alternative_vector_setup.sql  debug_vector_extension.sql
supabase/.temp/: pooler-url  project-ref
supabase/migrations/: 004_upgrade_hybrid_search_fixed.sql  005_add_query_embedding_function.sql  006_fix_embedding_function.sql  007_fix_legacy_search.sql  008_remove_broken_embedding_function.sql  009_fix_automatic_embedding_triggers.sql  010_switch_to_gemini_embeddings.sql  011_setup_gemini_background_processing.sql  012_disable_automatic_embedding_triggers.sql  013_improve_search_with_thresholds.sql  (+8 more)
(+81 files in other folders)
