[project]
name = "memos-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "google-genai>=1.25.0",
    "asyncpg>=0.30.0",
    "numpy>=2.3.1",
    "pgvector>=0.4.1",
    "pydantic-ai>=0.4.2",
]
